Añadimos footer y modificamos imagen del carousel

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body class="bg-gray-100">
+<body class="bg-customBackground text-customDark">
   <header class="bg-gray-800 text-white py-4">
     <div class="container mx-auto flex flex-wrap items-center justify-around">
       <!-- Logo -->
@@ -55,56 +55,53 @@
   <main>
 
     <section class="container-fluid mx-auto my-8">
-      <section class="container-fluid mx-auto my-8">
-        <!-- Carrusel con Bootstrap -->
-        <article class="mb-6">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="img/carousel-animation.png" class="d-block w-100 h-auto" alt="Foto animacion">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Animaciones</h5>
-                            <p>Descubre nuestras animaciones increíbles</p>
-                            <a href="/animaciones" class="btn btn-primary">Ver más</a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/carousel-terror.png" class="d-block w-100 h-auto" alt="Foto terror">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Terror</h5>
-                            <p>Explora nuestro catálogo de películas de terror</p>
-                            <a href="/terror" class="btn btn-primary">Ver más</a>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="img/carousel-famous.png" class="d-block w-100 h-auto" alt="Foto mas vistas">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Famosos</h5>
-                            <p>Conoce a las estrellas más grandes de la industria</p>
-                            <a href="/famosos" class="btn btn-primary">Ver más</a>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Anterior</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Siguiente</span>
-                </button>
+      <!-- Carrusel con Bootstrap -->
+      <article class="mb-6 d-none d-md-block">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="img/carousel-animation.png" class="d-block w-100 overflow-hidden" alt="Foto animación">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Animaciones</h5>
+                <p>Descubre nuestras animaciones increíbles</p>
+                <a href="/animaciones" class="btn btn-primary">Ver más</a>
+              </div>
             </div>
-        </article>
-    </section>
-    
+            <div class="carousel-item">
+              <img src="img/carousel-series.png" class="d-block w-100" alt="Foto más vistas">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Series</h5>
+                <p>Explora nuestro catálogo de series</p>
+                <a href="/series" class="btn btn-primary">Ver más</a>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="img/carousel-famous.png" class="d-block w-100" alt="Foto más vistas">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Las más vistas</h5>
+                <p>Conoce a las estrellas más grandes de la industria</p>
+                <a href="/famosos" class="btn btn-primary">Ver más</a>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+          </button>
+        </div>
+      </article>
 
-  
+
 
       <!-- Lista de Fotos en Horizontal con Tailwind CSS -->
       <article class="mb-6">
-        <div class="flex flex-wrap -mx-2">
+        <div class="flex flex-wrap">
           <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 px-2 mb-4">
             <img src="foto4.jpg" alt="Foto 4" class="w-full h-auto rounded">
           </div>
@@ -123,7 +120,35 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </main>
 
-  <footer></footer>
+  <footer class="bg-gray-800 text-white py-6">
+    <div class="container mx-auto flex flex-col items-center lg:flex-row lg:justify-between">
+      <!-- Logo o nombre del sitio -->
+      <div class="text-2xl font-bold mb-4 lg:mb-0">
+        Tu Cine en Casa
+      </div>
+
+      <!-- Enlaces del footer -->
+      <nav class="flex flex-wrap justify-center lg:justify-end space-x-4 lg:space-x-8 mb-4 lg:mb-0">
+        <a href="index.html" class="hover:text-blue-300">Inicio</a>
+        <a href="/peliculas" class="hover:text-blue-300">Películas</a>
+        <a href="/series" class="hover:text-blue-300">Series</a>
+        <a href="/contacto" class="hover:text-blue-300">Contacto</a>
+      </nav>
+
+      <!-- Redes sociales -->
+      <div class="flex space-x-4 mb-4 lg:mb-0">
+        <a href="https://www.facebook.com/" class="text-white hover:text-blue-300">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://twitter.com/" class="text-white hover:text-blue-300">
+          <i class="fa-brands fa-x-twitter"></i>
+        </a>
+        <a href="https://www.instagram.com" class="text-white hover:text-blue-300">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+    </div>
+  </footer>
 
   <!-- Bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
