--- a/html/login.html
+++ b/html/login.html
@@ -22,7 +22,7 @@
             </div>
             <!-- Menú de navegación izquierdo con Tailwind CSS -->
             <nav class="flex flex-wrap items-center space-x-4 mb-4 lg:mb-0">
-                <a href="index.html" class="hover:text-blue-300">Inicio</a>
+                <a href="../index.html" class="hover:text-blue-300">Inicio</a>
                 <a href="/nosotros" class="hover:text-blue-300">Nosotros</a>
                 <a href="/servicios" class="hover:text-blue-300">Servicios</a>
                 <a href="/contacto" class="hover:text-blue-300">Contacto</a>
