--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <i class="fas fa-star"></i>
         </a>
         <!-- Enlace para iniciar sesión -->
-        <a href="login.html" class="hover:text-blue-300">Iniciar Sesión</a>
+        <a href="html/login.html" class="hover:text-blue-300">Iniciar Sesión</a>
         <!-- Enlace para registrarse -->
-        <a href="register.html" class="hover:text-blue-300">Registrarse</a>
+        <a href="html/register.html" class="hover:text-blue-300">Registrarse</a>
       </nav>
     </div>
   </header>
@@ -58,7 +58,7 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/carousel-animation.png" class="d-block w-100 h-[600px]" alt="Foto animación">
+              <img src="img/carousel-animation.png" class="d-block w-100 h-[600px]" alt="Foto animación">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Animaciones</h5>
                 <p>Descubre nuestras animaciones increíbles</p>
@@ -66,7 +66,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../img/carousel-series.png" class="d-block w-100 h-[600px]" alt="Foto más vistas">
+              <img src="img/carousel-series.png" class="d-block w-100 h-[600px]" alt="Foto más vistas">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Series</h5>
                 <p>Explora nuestro catálogo de series</p>
@@ -74,7 +74,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../img/carousel-famous.png" class="d-block w-100 h-[600px]" alt="Foto más vistas">
+              <img src="img/carousel-famous.png" class="d-block w-100 h-[600px]" alt="Foto más vistas">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Las más vistas</h5>
                 <p>Conoce a las estrellas más grandes de la industria</p>
@@ -122,7 +122,7 @@
               </div>
             </a>
           </div>
-     
+
         </div>
       </section>
 
