--- a/html/login.html
+++ b/html/login.html
@@ -48,9 +48,9 @@
         <!-- Menú de navegación con Tailwind CSS -->
         <nav class="flex flex-wrap w-full lg:w-auto space-x-4 mt-2 lg:mt-0 justify-center lg:justify-start">
             <a href="../index.html" class="hover:text-customLightBlue">Inicio</a>
-            <a href="/nosotros" class="hover:text-customLightBlue">Películas</a>
-            <a href="/servicios" class="hover:text-customLightBlue">Series</a>
-            <a href="/contacto" class="hover:text-customLightBlue">Contacto</a>
+            <a href="/peliculas.html" class="hover:text-customLightBlue">Películas</a>
+            <a href="/series.html" class="hover:text-customLightBlue">Series</a>
+            <a href="/genero.html" class="hover:text-customLightBlue">Género</a>
 
             <div class="flex flex-wrap space-x-4 self-center lg:mb-0 content-center">
                 <!-- Formulario de búsqueda -->
