--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
     <!-- Menú de navegación con Tailwind CSS -->
     <nav class="flex flex-wrap w-full lg:w-auto space-x-4 mt-2 lg:mt-0 justify-center lg:justify-start">
       <a href="index.html" class="hover:text-customLightBlue">Inicio</a>
-      <a href="/nosotros" class="hover:text-customLightBlue">Películas</a>
-      <a href="/servicios" class="hover:text-customLightBlue">Series</a>
-      <a href="/contacto" class="hover:text-customLightBlue">Contacto</a>
+      <a href="/html/peliculas" class="hover:text-customLightBlue">Películas</a>
+      <a href="/html/series" class="hover:text-customLightBlue">Series</a>
+      <a href="/html/genero.html" class="hover:text-customLightBlue">Género</a>
 
       <div class="flex flex-wrap space-x-4 self-center lg:mb-0 content-center">
         <!-- Formulario de búsqueda -->
         <form action="/resultados" method="get" class="flex items-center space-x-2">
           <input type="text" name="query" placeholder="Buscar..."
-              class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm">
+            class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm">
           <button type="submit"
-              class="bg-customLightBlue hover:bg-customBlue text-customWhite px-2 py-1 mr-2 rounded-lg">Buscar</button>
-      </form>
+            class="bg-customLightBlue hover:bg-customBlue text-customWhite px-2 py-1 mr-2 rounded-lg">Buscar</button>
+        </form>
 
         <!-- Icono de estrella y enlace a Favoritos -->
-        <a href="/favoritos.html" class="text-customWhite hover:text-yellow-300">
+        <a href="/html/favoritos.html" class="text-customWhite hover:text-yellow-300">
           <i class="fa-solid fa-star"></i>
         </a>
         <!-- Icono de usuario y enlace a login y registro -->
@@ -80,7 +80,7 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/carousel-animation.png" class="d-block w-100 h-[600px]" alt="Foto animación">
+              <img src="img/carousel/carousel-animation.png" class="d-block w-100 h-[600px]" alt="Foto animación">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Animaciones</h5>
                 <p>Descubre nuestras animaciones increíbles</p>
@@ -88,7 +88,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/carousel-series.png" class="d-block w-100 h-[600px]" alt="Foto más vistas">
+              <img src="img/carousel/carousel-series.png" class="d-block w-100 h-[600px]" alt="Foto más vistas">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Series</h5>
                 <p>Explora nuestro catálogo de series</p>
@@ -96,7 +96,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/carousel-famous.png" class="d-block w-100 h-[600px]" alt="Foto más vistas">
+              <img src="img/carousel/carousel-famous.png" class="d-block w-100 h-[600px]" alt="Foto más vistas">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Las más vistas</h5>
                 <p>Conoce a las estrellas más grandes de la industria</p>
@@ -124,23 +124,45 @@
         <div class="flex flex-wrap justify-center lg:justify-start">
           <!-- Repite este bloque para más películas -->
           <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
-            <a href="register.html" class="block relative rounded overflow-hidden">
+            <a href="html/detalles.html#avatar" class="block relative rounded overflow-hidden">
               <img src="../img/peliculas/avatar.png" alt="Avatar"
                 class="w-full h-[300px] object-cover object-center hover:opacity-75">
               <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
                 <p class="font-bold text-lg mb-1">Avatar</p>
-                <p class="text-sm">Estreno: Fecha</p>
+                <p class="text-sm">Estreno: </p>
               </div>
             </a>
           </div>
 
           <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
-            <a href="register.html" class="block relative rounded overflow-hidden">
+            <a href="html/detalles.html#titanic" class="block relative rounded overflow-hidden">
               <img src="../img/peliculas/titanic.png" alt="Titanic"
                 class="w-full h-[300px] object-cover object-center hover:opacity-75">
               <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
                 <p class="font-bold text-lg mb-1">Titanic</p>
-                <p class="text-sm">Estreno: Fecha</p>
+                <p class="text-sm">Estreno: 1997</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
+            <a href="html/detalles.html#vengadores" class="block relative rounded overflow-hidden">
+              <img src="../img/peliculas/vengadores-infinity-war.png" alt="Vengadores"
+                class="w-full h-[300px] object-cover object-center hover:opacity-75">
+              <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                <p class="font-bold text-lg mb-1">Titanic</p>
+                <p class="text-sm">Estreno: 2018</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
+            <a href="html/detalles.html#vengadores" class="block relative rounded overflow-hidden">
+              <img src="../img/peliculas/frozen.png" alt="Frozen"
+                class="w-full h-[300px] object-cover object-center hover:opacity-75">
+              <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                <p class="font-bold text-lg mb-1">Titanic</p>
+                <p class="text-sm">Estreno: 2013</p>
               </div>
             </a>
           </div>
