Añadimos más contenido

--- a/html/favoritos.html
+++ b/html/favoritos.html
@@ -48,13 +48,13 @@
         <!-- Menú de navegación con Tailwind CSS -->
         <nav class="flex flex-wrap w-full lg:w-auto space-x-4 mt-2 lg:mt-0 justify-center lg:justify-start">
             <a href="../index.html" class="hover:text-customLightBlue">Inicio</a>
-            <a href="/peliculas.html" class="hover:text-customLightBlue">Películas</a>
-            <a href="/series.html" class="hover:text-customLightBlue">Series</a>
-            <a href="/genero.html" class="hover:text-customLightBlue">Género</a>
+            <a href="peliculas.html" class="hover:text-customLightBlue">Películas</a>
+            <a href="series.html" class="hover:text-customLightBlue">Series</a>
+            <a href="genero.html" class="hover:text-customLightBlue">Género</a>
 
             <div class="flex flex-wrap space-x-4 self-center lg:mb-0 content-center">
                 <!-- Formulario de búsqueda -->
-                <form action="/resultados" method="get" class="flex items-center space-x-2">
+                <form action="#" method="get" class="flex items-center space-x-2">
                     <input type="text" name="query" placeholder="Buscar..."
                         class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm">
                     <button type="submit"
@@ -62,7 +62,7 @@
                 </form>
 
                 <!-- Icono de estrella y enlace a Favoritos -->
-                <a href="/favoritos.html" class="text-customWhite hover:text-yellow-300">
+                <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
                     <i class="fa-solid fa-star"></i>
                 </a>
                 <!-- Icono de usuario y enlace a login y registro -->
@@ -75,9 +75,9 @@
 
     <main class="container mx-auto my-8">
         <h2 class="text-2xl font-bold mb-4 text-customDark lg:text-left">Tus favoritos</h2>
-        <section class="flex flex-col md:flex-row gap-8">
+        <section class="flex flex-col md:flex-col gap-8">
             <!-- Película Titanic -->
-            <article id="titanic" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+            <article id="titanic" class="bg-yellow-200 p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
                 <div class="md:w-1/3 flex items-center justify-center">
                     <img src="../img/peliculas/titanic.png" alt="Imagen de Titanic" class="w-full h-60 object-cover rounded-lg">
                 </div>
@@ -91,7 +91,7 @@
             </article>
     
             <!-- Película Avatar -->
-            <article id="avatar" class="bg-white p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
+            <article id="avatar" class="bg-yellow-200 p-4 md:p-8 rounded-lg shadow-lg flex flex-col md:flex-row w-full">
                 <div class="md:w-1/3 flex items-center justify-center">
                     <img src="../img/peliculas/avatar.png" alt="Imagen de Avatar" class="w-full h-60 object-cover rounded-lg">
                 </div>
