--- a/html/genero.html
+++ b/html/genero.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarse</title>
+    <title>Iniciar Sesión</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -73,36 +73,14 @@
         </nav>
     </header>
 
-    <main class="bg-gray-100 h-screen flex items-center justify-center">
-        <div class="bg-customWhite p-8 rounded shadow-lg w-96">
-            <h2 class="text-2xl font-bold mb-4 text-center">Registrarse</h2>
-
-            <!-- Formulario de registro -->
-            <form>
-                <div class="mb-4">
-                    <label for="name" class="block text-sm font-medium text-customDark">Nombre</label>
-                    <input type="text" id="name" name="name" class="mt-1 p-2 w-full border rounded">
-                </div>
-
-                <div class="mb-4">
-                    <label for="email" class="block text-sm font-medium text-customDark">Correo Electrónico</label>
-                    <input type="email" id="email" name="email" class="mt-1 p-2 w-full border rounded">
-                </div>
-
-                <div class="mb-4">
-                    <label for="password" class="block text-sm font-medium text-customDark">Contraseña</label>
-                    <input type="password" id="password" name="password" class="mt-1 p-2 w-full border rounded">
-                </div>
-
-                <button type="submit"
-                    class="w-full bg-customBlue hover:bg-customDarkBlue text-customWhite py-2 rounded">Registrarse</button>
-            </form>
-
-            <p class="mt-4 text-sm text-customDark text-center">¿Ya tienes una cuenta? <a href="login.html"
-                    class="text-customBlue hover:underline">Inicia sesión aquí</a>.</p>
+    <main>
+      
+            <h2 class="text-2xl font-bold mb-4 text-center">Géneros</h2>
+ 
         </div>
 
     </main>
+
     <footer class="bg-customDark text-customWhite py-2">
         <nav class="container-fluid flex flex-col lg:flex-row lg:justify-between text-center">
             <!-- Nombre del sitio -->
