--- a/html/login.html
+++ b/html/login.html
@@ -48,13 +48,13 @@
         <!-- Menú de navegación con Tailwind CSS -->
         <nav class="flex flex-wrap w-full lg:w-auto space-x-4 mt-2 lg:mt-0 justify-center lg:justify-start">
             <a href="../index.html" class="hover:text-customLightBlue">Inicio</a>
-            <a href="/peliculas.html" class="hover:text-customLightBlue">Películas</a>
-            <a href="/series.html" class="hover:text-customLightBlue">Series</a>
-            <a href="/genero.html" class="hover:text-customLightBlue">Género</a>
+            <a href="peliculas.html" class="hover:text-customLightBlue">Películas</a>
+            <a href="series.html" class="hover:text-customLightBlue">Series</a>
+            <a href="genero.html" class="hover:text-customLightBlue">Género</a>
 
             <div class="flex flex-wrap space-x-4 self-center lg:mb-0 content-center">
                 <!-- Formulario de búsqueda -->
-                <form action="/resultados" method="get" class="flex items-center space-x-2">
+                <form action="#" method="get" class="flex items-center space-x-2">
                     <input type="text" name="query" placeholder="Buscar..."
                         class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm">
                     <button type="submit"
@@ -62,11 +62,11 @@
                 </form>
 
                 <!-- Icono de estrella y enlace a Favoritos -->
-                <a href="/favoritos.html" class="text-customWhite hover:text-yellow-300">
+                <a href="favoritos.html" class="text-customWhite hover:text-yellow-300">
                     <i class="fa-solid fa-star"></i>
                 </a>
                 <!-- Icono de usuario y enlace a login y registro -->
-                <a href="html/login.html" class="text-customWhite hover:text-customLightBlue">
+                <a href="login.html" class="text-customWhite hover:text-customLightBlue">
                     <i class="fa-solid fa-user"></i>
                 </a>
             </div>
