--- a/html/series.html
+++ b/html/series.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarse</title>
+    <title>Iniciar Sesión</title>
     <!-- Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -73,36 +73,65 @@
         </nav>
     </header>
 
-    <main class="bg-gray-100 h-screen flex items-center justify-center">
-        <div class="bg-customWhite p-8 rounded shadow-lg w-96">
-            <h2 class="text-2xl font-bold mb-4 text-center">Registrarse</h2>
+        <!-- Lista de series más vistas -->
+        <section class="container mx-auto my-8">
+            <h2 class="text-2xl font-bold mb-4 text-customDark lg:text-left">Series más vistas</h2>
 
-            <!-- Formulario de registro -->
-            <form>
-                <div class="mb-4">
-                    <label for="name" class="block text-sm font-medium text-customDark">Nombre</label>
-                    <input type="text" id="name" name="name" class="mt-1 p-2 w-full border rounded">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-6 gap-4">
+                <!-- Repite este bloque para más series -->
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="html/detalles.html#avatar" class="block relative rounded overflow-hidden">
+                        <img src="../img/peliculas/avatar.png" alt="Avatar"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Avatar</p>
+                            <p class="text-sm">Estreno: </p>
+                        </div>
+                    </a>
+                </div>
+                <!-- Fin del bloque repetido -->
+
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="html/detalles.html#titanic" class="block relative rounded overflow-hidden">
+                        <img src="../img/peliculas/titanic.png" alt="Titanic"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Titanic</p>
+                            <p class="text-sm">Estreno: 1997</p>
+                        </div>
+                    </a>
                 </div>
 
-                <div class="mb-4">
-                    <label for="email" class="block text-sm font-medium text-customDark">Correo Electrónico</label>
-                    <input type="email" id="email" name="email" class="mt-1 p-2 w-full border rounded">
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="html/detalles.html#vengadores" class="block relative rounded overflow-hidden">
+                        <img src="../img/peliculas/vengadores-infinity-war.png" alt="Vengadores"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Los Vengadores</p>
+                            <p class="text-sm">Estreno: 2018</p>
+                        </div>
+                    </a>
                 </div>
 
-                <div class="mb-4">
-                    <label for="password" class="block text-sm font-medium text-customDark">Contraseña</label>
-                    <input type="password" id="password" name="password" class="mt-1 p-2 w-full border rounded">
+                <div class="w-full p-4 transition duration-300 transform hover:scale-105">
+                    <a href="html/detalles.html#vengadores" class="block relative rounded overflow-hidden">
+                        <img src="../img/peliculas/frozen.png" alt="Frozen"
+                            class="w-full h-[200px] object-cover object-center hover:opacity-75">
+                        <div
+                            class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                            <p class="font-bold text-lg mb-1">Frozen</p>
+                            <p class="text-sm">Estreno: 2013</p>
+                        </div>
+                    </a>
                 </div>
 
-                <button type="submit"
-                    class="w-full bg-customBlue hover:bg-customDarkBlue text-customWhite py-2 rounded">Registrarse</button>
-            </form>
-
-            <p class="mt-4 text-sm text-customDark text-center">¿Ya tienes una cuenta? <a href="login.html"
-                    class="text-customBlue hover:underline">Inicia sesión aquí</a>.</p>
-        </div>
-
+            </div>
+        </section>
     </main>
+
     <footer class="bg-customDark text-customWhite py-2">
         <nav class="container-fluid flex flex-col lg:flex-row lg:justify-between text-center">
             <!-- Nombre del sitio -->
