--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     <!-- Menú de navegación con Tailwind CSS -->
     <nav class="flex flex-wrap w-full lg:w-auto space-x-4 mt-2 lg:mt-0 justify-center lg:justify-start">
       <a href="index.html" class="hover:text-customLightBlue">Inicio</a>
-      <a href="/html/peliculas" class="hover:text-customLightBlue">Películas</a>
-      <a href="/html/series" class="hover:text-customLightBlue">Series</a>
+      <a href="/html/peliculas.html" class="hover:text-customLightBlue">Películas</a>
+      <a href="/html/series.html" class="hover:text-customLightBlue">Series</a>
       <a href="/html/genero.html" class="hover:text-customLightBlue">Género</a>
 
       <div class="flex flex-wrap space-x-4 self-center lg:mb-0 content-center">
         <!-- Formulario de búsqueda -->
-        <form action="/resultados" method="get" class="flex items-center space-x-2">
+        <form action="#" method="get" class="flex items-center space-x-2">
           <input type="text" name="query" placeholder="Buscar..."
             class="px-1/2 py-1 rounded-lg focus:outline-none focus:ring focus:border-customLightBlue lg:mb-0 text-sm">
           <button type="submit"
@@ -66,7 +66,7 @@
           <i class="fa-solid fa-star"></i>
         </a>
         <!-- Icono de usuario y enlace a login y registro -->
-        <a href="html/login.html" class="text-customWhite hover:text-customLightBlue">
+        <a href="/html/login.html" class="text-customWhite hover:text-customLightBlue">
           <i class="fa-solid fa-user"></i>
         </a>
       </div>
@@ -84,7 +84,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5>Animaciones</h5>
                 <p>Descubre nuestras animaciones increíbles</p>
-                <a href="/animaciones" class="btn btn-primary">Ver más</a>
+                <a href="/html/genero.html#animaciones" class="btn btn-primary">Ver más</a>
               </div>
             </div>
             <div class="carousel-item">
@@ -92,7 +92,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5>Series</h5>
                 <p>Explora nuestro catálogo de series</p>
-                <a href="/series" class="btn btn-primary">Ver más</a>
+                <a href="/html/series.html" class="btn btn-primary">Ver más</a>
               </div>
             </div>
             <div class="carousel-item">
@@ -100,7 +100,7 @@
               <div class="carousel-caption d-none d-md-block">
                 <h5>Las más vistas</h5>
                 <p>Conoce a las estrellas más grandes de la industria</p>
-                <a href="/famosos" class="btn btn-primary">Ver más</a>
+                <a href="/html/peliculas.html" class="btn btn-primary">Ver más</a>
               </div>
             </div>
           </div>
@@ -129,7 +129,7 @@
                 class="w-full h-[300px] object-cover object-center hover:opacity-75">
               <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
                 <p class="font-bold text-lg mb-1">Avatar</p>
-                <p class="text-sm">Estreno: </p>
+                <p class="text-sm">Estreno: 2009</p>
               </div>
             </a>
           </div>
@@ -146,22 +146,22 @@
           </div>
 
           <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
-            <a href="html/detalles.html#vengadores" class="block relative rounded overflow-hidden">
+            <a href="html/detalles.html#avengers" class="block relative rounded overflow-hidden">
               <img src="../img/peliculas/vengadores-infinity-war.png" alt="Vengadores"
                 class="w-full h-[300px] object-cover object-center hover:opacity-75">
               <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
-                <p class="font-bold text-lg mb-1">Titanic</p>
+                <p class="font-bold text-lg mb-1">Los Vengadores</p>
                 <p class="text-sm">Estreno: 2018</p>
               </div>
             </a>
           </div>
 
           <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
-            <a href="html/detalles.html#vengadores" class="block relative rounded overflow-hidden">
+            <a href="html/detalles.html#frozen" class="block relative rounded overflow-hidden">
               <img src="../img/peliculas/frozen.png" alt="Frozen"
                 class="w-full h-[300px] object-cover object-center hover:opacity-75">
               <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
-                <p class="font-bold text-lg mb-1">Titanic</p>
+                <p class="font-bold text-lg mb-1">Frozen</p>
                 <p class="text-sm">Estreno: 2013</p>
               </div>
             </a>
@@ -170,8 +170,58 @@
         </div>
       </section>
 
-      <!-- Scripts de Bootstrap (jQuery y Popper.js son requeridos por Bootstrap) -->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+      <!-- Lista de peliculas más vistas -->
+      <section class="container-fluid mx-auto my-8">
+        <h2 class="text-2xl font-bold mb-4 text-customDark lg:text-left">Series más vistas</h2>
+
+        <div class="flex flex-wrap justify-center lg:justify-start">
+          <!-- Repite este bloque para más series -->
+          <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
+            <a href="html/detalles.html#avatar" class="block relative rounded overflow-hidden">
+              <img src="../img/peliculas/avatar.png" alt="Avatar"
+                class="w-full h-[300px] object-cover object-center hover:opacity-75">
+              <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                <p class="font-bold text-lg mb-1">Avatar</p>
+                <p class="text-sm">Estreno: 2009</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
+            <a href="html/detalles.html#titanic" class="block relative rounded overflow-hidden">
+              <img src="../img/peliculas/titanic.png" alt="Titanic"
+                class="w-full h-[300px] object-cover object-center hover:opacity-75">
+              <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                <p class="font-bold text-lg mb-1">Titanic</p>
+                <p class="text-sm">Estreno: 1997</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
+            <a href="html/detalles.html#avengers" class="block relative rounded overflow-hidden">
+              <img src="../img/peliculas/vengadores-infinity-war.png" alt="Vengadores"
+                class="w-full h-[300px] object-cover object-center hover:opacity-75">
+              <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                <p class="font-bold text-lg mb-1">Los Vengadores</p>
+                <p class="text-sm">Estreno: 2018</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/4 xl:w-1/6 p-4 transition duration-300 transform hover:scale-105">
+            <a href="html/detalles.html#frozen" class="block relative rounded overflow-hidden">
+              <img src="../img/peliculas/frozen.png" alt="Frozen"
+                class="w-full h-[300px] object-cover object-center hover:opacity-75">
+              <div class="bg-customDarkBlue bg-opacity-75 absolute bottom-0 w-full text-customWhite py-2 text-center">
+                <p class="font-bold text-lg mb-1">Frozen</p>
+                <p class="text-sm">Estreno: 2013</p>
+              </div>
+            </a>
+          </div>
+
+        </div>
+      </section>
   </main>
 
   <footer class="bg-customDark text-customWhite py-2">
